<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/about_title" >
		<Preference
			android:key="about_version"
			android:title="Version" />
		<Preference
			android:summary="© 2011-2014, MARSCOIN"
			android:title="Copyright" />
		<Preference
			android:key="about_license"
			android:title="@string/about_license_title" />
		<Preference
			android:key="about_source"
			android:title="Source Code" />
		<Preference android:key="about_credits_marscoinj" />
		<Preference
			android:key="about_credits_zxing"
			android:title="@string/about_credits_zxing_title" />
		<Preference
			android:key="about_credits_icon"
			android:title="@string/about_credits_icon_title" />
		<Preference
			android:key="about_market_app"
			android:title="@string/about_credits_market_app_title" />
		<Preference
			android:key="about_market_publisher"
			android:title="@string/about_credits_market_publisher_title" />
	</PreferenceCategory>

</PreferenceScreen>